syntax = "proto3";

option java_package = "com.example.foo";
option java_outer_classname = "Ponycopter";
option java_multiple_files = true;
option go_package = "proto/";

message TodoItem {
    int32 id = 1;
    string name = 2;
    string desc = 3;
    optional int32 days_left = 4;
}

message ListTodoItemFilterRequest {
    optional string filter = 1;
}


message GetTodoItemRequest {
    int32 id = 1 ; 
}

message GetTodoItemResponse {
    TodoItem item = 1;

}

message CreateTodoItemRequest {
    string name = 1;
    string desc = 2;
    optional int32 days_left = 3;
}


message UpdateTodoItemRequest {
    int32 id = 1;
    TodoItem item = 2;
}

message DeleteTodoItemRequest {
    TodoItem item = 1;
}

message DeleteTodoItemResponse {
    
}

service TodoService {
    rpc ListTodoItems(ListTodoItemFilterRequest) returns (stream TodoItem) {}
    rpc GetTodoItem(GetTodoItemRequest) returns (TodoItem) {}
    rpc CreateTodoItem(CreateTodoItemRequest) returns (TodoItem) {}
    rpc UpdateTodoItem(UpdateTodoItemRequest) returns (TodoItem) {}
    rpc DeleteTodoItem(DeleteTodoItemRequest) returns (DeleteTodoItemResponse) {}
}   
